# fiap-datathon-fase5

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  estrutura.txt  pastas.txt  pyproject.toml  requirements.txt  setup_project.py
app/: config.py  main.py  schemas.py
app/model/: pipeline.joblib
logs/: drift_data.csv
src/: evaluate.py  feature_engineering.py  preprocessing.py  train.py  transformers.py  utils.py
tests/: test_api.py  test_core.py  test_integration.py
