[tool.poetry]
name = "passos-magicos-datathon"
version = "0.1.0"
description = "Modelo preditivo de risco de defasagem escolar para a Associação Passos Mágicos."
authors = ["fernando-lfs <fernando.l.f@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
# Bibliotecas de Dados
pandas = "^2.2.0"          
numpy = "^1.26.4"          
scikit-learn = "^1.5.0"    

# API e Serialização
fastapi = "^0.110.0"      
uvicorn = "^0.29.0"        
joblib = "^1.4.0"          
python-multipart = "^0.0.9" 
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0" 

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
black = "^24.4.0"
isort = "^5.13.2"
httpx = "^0.27.0"                

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src", "app"]
addopts = "--cov=src --cov=app --cov-report=term-missing -vv"
